ec2.yaml
AWSTemplateFormatVersion: '2010-09-09'

Resources:
  myEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: !Ref AvailabilityZoneParameter
      KeyName: !Ref KeyNameParameter  
      ImageId: ami-09a4a9ce71ff3f20b
      InstanceType: !Ref InstanceTypeParameter
      Monitoring: false
      SecurityGroups:
        - !Ref SSHSecurityGroup
        - !Ref ServerSecurityGroup
      UserData: !Base64 |
        #!/bin/bash -ex
        # put your script here
      Tags:
        - Key: key
          Value: value

  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: enable SSH access via port 22
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        FromPort: 22
        IpProtocol: tcp
        ToPort: 22
      # VpcId: !Ref VPCParameter

  ServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: allow connections from CIDR ranges
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        FromPort: 8080
        IpProtocol: tcp
        ToPort: 8080
      # SecurityGroupEgress:
      # - IpProtocol: tcp
      #   FromPort: 8080
      #   ToPort: 8080
      #   CidrIp: 0.0.0.0/0
      # VpcId: !Ref VPCParameter

Parameters: 
  AvailabilityZoneParameter: 
    Type: String
    # Default: ap-southeast-1
    AllowedValues: 
      - ap-southeast-1a
      - ap-southeast-1b
      - ap-southeast-1c
    Description: Enter ap-southeast-1a, ap-southeast-1b and ap-southeast-1c.
  InstanceTypeParameter: 
    Type: String
    # Default: t2.micro
    AllowedValues: 
      - t2.micro
      - m1.small
      - m1.large
    Description: Enter t2.micro, m1.small, or m1.large. Default is t2.micro.
  KeyNameParameter:
    Type: AWS::EC2::KeyPair::KeyName
  # VPCParameter:
  #   Type: AWS::EC2::VPC::Id
